--- a/RELEASE-NOTES
+++ b/RELEASE-NOTES
@@ -1,6 +1,12 @@
-# Release 3.2
+# Release 3.2.1 - (July 02, 2018)
 
- First release containing changes for BitcoinGold
+ * PoW Upgrade
+ * Upstream fixes
+ * Improved bootstrapping
+
+# Release 3.2-beta - (March 28, 2018)
+
+ * First release containing changes for BitcoinGold
 
 # Release 3.1.3 - (April 16, 2018)
 
